# templ

./: Cargo.toml  README.md
src/: cli.rs  main.rs
