cargo-features = ["strip"]

[package]
name = "templ"
version = "0.1.0"
edition = "2021"

authors = ["Ethan Wu <ethanwu@cs.ucsb.edu>"]
description = "Handlebars templating for generating files."

[dependencies]
anyhow = "1"
clap = "2"

log = "0.4"
env_logger = "0.9"


serde = "1"
handlebars = "4"
toml = "0.5"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
